Add CommandTest class